deploy/k8s/sso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso
spec:
  selector:
    app.kubernetes.io/name: sso
  ports:
    - name: http
      port: 80
      targetPort: http
